# sls_roller

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  aor.cpp  density.cpp  index.html  params.json  sls.cpp  sls_post.cpp
cmake/: FindOpenCL.cmake
common/: common.h  database.h  generation.h  initialization.h  input_output.h  parser.h  validation copy.h  validation.h
matlab/: readdata.m
